# hoops-edge-database-etl

./: .dockerignore  .gitignore  CLAUDE.md  CODEX_SESSION_SUMMARY.md  Dockerfile  KICKOFF_PROMPT.txt  Makefile  ORCHESTRATE.md  README.md  README_ORCHESTRATION.md  analytics-engineer.md  config.yaml  data-engineer.md  docker-compose.yml  infra-engineer.md  pyproject.toml  session_1_data_engineer.txt  session_2_analytics_engineer.txt  session_3_test_engineer.txt  session_4_infra_engineer.txt  session_5_integration.txt  test-engineer.md
docs/: athena_examples.sql  cbbd_docs_urls.txt  file1.json  gold_layer_design.md  pbp_playtype_patterns.yaml  required_params_from_file1.json
reports/: analytics_engineer_done.md  backtest_2025.md  backtest_multi_season.md  buildout_summary.md  codebase_state.md  data_audit.md  data_engineer_done.md  full_data_audit.md  infra_engineer_done.md  real_data_inventory.md  real_data_validation.md  test_engineer_done.md
scripts/: audit_lakehouse.py  backfill_missing_plays.py  backtest_spreads.py  build_pbp_game_team_stats.py  build_pbp_game_teams_flat.py  build_pbp_plays_enriched.py  build_pbp_team_daily_rollup.py  build_pbp_team_daily_rollup_adj.py  check_lineups.py  check_prior_season.py  deduplicate_silver.py  delete_fct_games_asof.py  diagnose_compression.py  extract_lineups_game_ids.py  fix_glue_catalog.py  list_non_empty_raw_parts.py  normalize_fct_games_partitions.py  rebuild_from_raw.py  run_games_seasons.py  sos_sweep_solver.py  tune_ratings.py  tune_ratings_holdout.py  update_required_params.py  validate_gold_tables.py  verify_kenpom.py  (+1 more)
(+89 files in other folders)
